--- a/package.json
+++ b/package.json
@@ -16,16 +16,24 @@
     },
     "dependencies": {
         "@brave/brave-ui": "^0.40.4",
+        "buffer": "^6.0.3",
+        "chrome-dgram": "^3.0.6",
+        "chrome-dns": "^1.0.1",
+        "crypto-browserify": "^3.12.0",
         "jszip": "^3.10.1",
         "net": "^1.0.2",
         "parse-torrent": "^11.0.14",
+        "path": "^0.12.7",
         "prettier-bytes": "^1.0.4",
+        "querystring": "^0.2.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.1.2",
         "redux": "^4.2.1",
+        "stream-browserify": "^3.0.0",
         "styled-components": "^6.0.8",
         "throttleit": "^1.0.0",
+        "timers-browserify": "^2.0.12",
         "typesafe-actions": "^5.1.0",
         "webext-redux": "^2.1.9",
         "webtorrent": "^2.1.25"
