--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -7,16 +7,22 @@
     "48": "assets/icons/webtorrent-logo-48.png",
     "96": "assets/icons/webtorrent-logo-96.png"
   },
+  "background": {
+    "scripts": [
+      "out/background.bundle.js"
+    ],
+    "persistent": false
+  },
   "protocol_handlers": [
     {
       "protocol": "magnet",
       "name": "Magnet Extension",
-      "uriTemplate": "firefox_webtorrent.html#!/%s"
+      "uriTemplate": "firefox_webtorrent.html?%s"
     },
     {
       "protocol": "ext+torrent",
       "name": "Torrent Extension",
-      "uriTemplate": "firefox-webtorrent.html#!/%s"
+      "uriTemplate": "firefox-webtorrent.html?%s"
     }
   ],
   "permissions": [
